# hotel-booking

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
bookings/: models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
bookings/models/: models.py
bookings/repositories/: __init__.py  repositories.py
bookings/serializers/: __init__.py  serializers.py
bookings/services/: __init__.py  services.py
bookings/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
bookings/views/: views.py
config/: settings.py  urls.py
