[tool.poetry]
name = "hotel-booking"
version = "0.1.0"
description = "API for hotel booking service"
authors = ["Bogdan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "FLY", "ANN", "S", "UP", "YTT", "FBT", "Q", "RUF"]
ignore = ["ANN101", "S101", "I001", "RUF012", "F401"]
fixable = ["A", "B", "C", "F", "Q", "S", "T", "U", "W", "YTT"]
unfixable = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true
